# hopsworks-tutorials

./: .gitignore  1_feature_groups_creation.ipynb  2_training_dataset_creation.ipynb  README.md  electricity_pages.md  fares.csv  index.md  iris_tutorial.ipynb  local_setup.sh  model.pkl  quickstart.ipynb  requirements.txt  rides.csv  run_jupyter.sh  streamlit_nyc_taxi_fares_app.py  temp_coordinates.json  test.py
Credit_scores/: 1_creating_feature_groups.ipynb  2_creating_feature_views.ipynb  3_modeling.ipynb
Electricity/: 1_creating_feature_groups.ipynb  2_training_dataset.ipynb  3_modeling.ipynb
air_quality/: 1_backfill_feature_groups.ipynb  2_feature_pipeline.ipynb  3_feature_views_and_training_dataset.ipynb  4_model_training.ipynb  features.py  requirements.txt  streamlit_app.py
anti_money_laundering/: 1_create_feature_groups.ipynb  2_feature_views_and_training_dataset.ipynb  3_train_deploy_serve_adversarial_aml.ipynb  README.md
api_examples/: alerts.ipynb  datasets.ipynb  feature_group_change_notification_cdc.ipynb  feature_monitoring.ipynb  git.ipynb  jobs.ipynb  kafka.ipynb  online_ingestion.ipynb  online_ingestion_observability.ipynb  opensearch.ipynb  projects.ipynb  search.ipynb  secrets.ipynb
benchmarks/model-deployment/locust/: pyproject.toml
benchmarks/model-deployment/locust/kubernetes-locust/: deploy.sh  slave-deployment.yaml
bitcoin/: .env  1_backfill_feature_groups.ipynb  2_feature_pipeline.ipynb  3_feature_views_and_training_dataset.ipynb  4_model_training.ipynb  5_batch_predictions.ipynb  functions.py  requirements.txt  streamlit_app.py
(+1370 files in other folders)
