[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Fabio Buso <fabio@hopsworks.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
locust = "^2.32.3"
ipykernel = "^6.29.5"
avro = "^1.12.0"
fastavro = "^1.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
